--- a/index.html
+++ b/index.html
@@ -37,15 +37,20 @@ flex-direction: row;
 }
 
 .contenedor{width:80%;
-    heigth: 500px;
+    height: 500px;
     background: #FFSC29;
     margin: 50px auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items:stretch;
   }
 
+.hijo{background-color: red;
+  width:50px;
+  height:50px;
+}
 </style>
   <title>FIKIEXPLOSION</title>
 </head>
