--- a/FikiExplosion/index-2.html
+++ b/FikiExplosion/index-2.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
+  body{background-image: linear-gradient(140deg,#621BAA,#9929B5,#AB58DE 45%); }
+
   body{
   background:rgb(85, 196, 233); 
   font-family: 'Arial Narrow', Arial, sans-serif;
@@ -16,7 +18,7 @@
     font-family: verdana; 
     font-size: 300%;
 }
-  p{color: red;
+p{color: red;
     font-family: courier;
     font-size: 160%;
     border: 5px solid powderblue;
