--- a/FikiExplosion/index-2.html
+++ b/FikiExplosion/index-2.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-  body{background-image: linear-gradient(140deg,#621BAA,#9929B5,#AB58DE 45%); }
-
+  background-image: linear-gradient(140deg,#3941E3,#8D32FA,#E920F0 45%);
+  background:rgb(85, 196, 233);
   body{
-  background:rgb(85, 196, 233); 
+  background:linear-gradient(140deg,#3941E3,#8D32FA,#E920F0,45%);
   font-family: 'Arial Narrow', Arial, sans-serif;
   font-size: 20px;
   }
