--- a/FikiExplosion/index-2.html
+++ b/FikiExplosion/index-2.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-  background-image: linear-gradient(140deg,#3941E3,#8D32FA,#E920F0 45%);
+  background-image: linear-gradient(140deg,#3941E3,#8D32FA,#E920F0, 45%);
   background:rgb(85, 196, 233);
   body{
   background:linear-gradient(140deg,#3941E3,#8D32FA,#E920F0,45%);
