--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
+ 
   body{background-color:#F8E6F9;}
   <title>Menu Desplegable</title>
 	<style type="text/css">
@@ -14,7 +15,8 @@
 			
   #header {margin:auto;
 		width:500px;
-	 font-family:Arial, Helvetica, sans-serif;}
+    font-family: 'STIX Two Text', serif;
+    }
 			
 	ul, ol {list-style:none;
     width:500px}
@@ -55,20 +57,25 @@ nav{background:#f8f1f7;
 
   h1{border: 5px solid white;
     padding: 10px;
-    margin: 10%;}
+    margin: 10%;
+    font-family: 'Style Script', cursive;}
 
 .main{
   width:60%;
 }
 
+p{font-family: 'Dancing Script', cursive;}
+
 footer{border: 5px solid white;
     padding: 10px;
-    margin: 10%;}
+    margin: 10%;
+    font-family: 'MonteCarlo', cursive;}
 		</style>
 
   <title>FIKIEXPLOSION</title>
 
   <header>
+  
   <h1>titulo principal</h1>
 </header>
 <body>
@@ -94,16 +101,32 @@ footer{border: 5px solid white;
       <li><a href="">Contacto</a></li>
     </ul>
   </div>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital@1&display=swap" rel="stylesheet">
   <main>
+ 
 <h1>Bienvenidos a FikiExplosion</h1>
 <img src="https://i.pinimg.com/236x/05/6a/64/056a644918292cb490a07ff02c117ced.jpg">
 
-<p>Somos un emprendimiento que le encanta crear recuerdos. Tenemos cinco años de experiencia en decoracion de eventos, elaboracion de detalles,regalos y desayunos, todos personalizados para crear una experiencia unica.</p>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
+
+<p>Somos un emprendimiento que le encanta crear recuerdos. Tenemos cinco años de experiencia en decoracion de eventos, elaboracion de detalles,regalos y desayunos, todos personalizados para crear una experiencia unica.
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
+</p>
+
   </main>
 
 
 <footer>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=MonteCarlo&family=Style+Script&display=swap" rel="stylesheet">
   Direccion:
    Avenida Mirolindo
    Al lado del colegio champagnat
